Updating files via DataCamp: course.yml, chapter1.md

--- a/course.yml
+++ b/course.yml
@@ -1,5 +1,5 @@
-title            : T ja MS syndmused
-description      : This is an automatically generated demo course which will help you on your way to create an awesome DataCamp course.
-university       : DataCamp
+title            : Tõenäosusteooria ja statistika lisapraktikumid, osa 3 (sündmused)
+description      : This is a lab for students of Tartu University who are registered for the course Probability and mathematical statistics.  Fall semester, 2017.
+university       : University of Tartu
 difficulty_level : 2
 time_needed      : 1 hour
