Updating files via DataCamp: course.yml, chapter1.md

--- a/course.yml
+++ b/course.yml
@@ -1,4 +1,4 @@
-title            : Tõenäosusteooria ja statistika lisapraktikumid, osa 3 (sündmused)
+title            : Tõenäosusteooria ja statistika lisapraktikumid, osa 3 (sündmused ja tõenäosused)
 description      : This is a lab for students of Tartu University who are registered for the course Probability and mathematical statistics.  Fall semester, 2017.
 university       : University of Tartu
 difficulty_level : 2
